--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body>
 
 <div id="container"></div>
 
-<script src="/scripts/index.js"></script>
+<script src="/script/index.js"></script>
 
 </body>
 </html>
